feat: setup page layout, header, footer, and animation with framer-motion

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,15 +5,12 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro Basics</title>
+    <title>Codetips - Blog</title>
     <script is:inline>
       const getThemePreference = () => {
-        if (
-          typeof localStorage !== "undefined" &&
-          localStorage.getItem("theme")
-        ) {
-          return localStorage.getItem("theme");
-        }
+        const theme =
+          typeof localStorage !== "undefined" && localStorage.getItem("theme");
+        if (theme) return theme;
         return window.matchMedia("(prefers-color-scheme: dark)").matches
           ? "dark"
           : "light";
