--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,16 @@
 ---
-import Welcome from "../components/Welcome.astro";
-import Layout from "../layouts/Layout.astro";
+import Content from "@/components/Content.astro";
+import Header from "@/components/Header.astro";
+import Footer from "@/components/Footer.astro";
+import Layout from "@/layouts/Layout.astro";
 
 import "@/styles/globals.css";
 ---
 
 <Layout>
-  <Welcome />
+  <Content>
+    <Header />
+    <main class="flex flex-1 flex-col"></main>
+    <Footer />
+  </Content>
 </Layout>
