chore: install and setup app fonts

--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -22,8 +22,7 @@ import { SvgTexture } from "@/components/texture";
 
 <style>
   #container {
-    font-family: Inter, Roboto, "Helvetica Neue", "Arial Nova", "Nimbus Sans",
-      Arial, sans-serif;
+    font-family: "Playwrite GB S Variable", cursive;
     height: 100%;
   }
 </style>
