--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="w-full h-20 z-10">
+<footer class="w-full h-20 min-h-20 z-10">
   <div
     class="flex items-center mx-auto max-w-4xl h-full border-t border-t-zinc-300 dark:border-t-zinc-700/70 w-full px-4"
   >
