--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,13 +2,13 @@
 import { IconToggle } from "@/components/icon-toggle";
 ---
 
-<header class="sticky top-0 z-10 h-min w-full">
+<header class="sticky top-0 z-[11] h-min w-full px-4">
   <div
-    class="hidden md:block bg-white/50 dark:bg-zinc-950/20 mx-auto max-w-4xl rounded-2xl mt-4 backdrop-filter backdrop-blur-xl dark:border-white/10"
+    class="hidden sm:block bg-white/50 dark:bg-zinc-950/20 mx-auto max-w-3xl rounded-2xl mt-4 backdrop-filter backdrop-blur dark:border-white/10"
   >
     <div class="flex px-6 py-3 justify-between w-full gap-2">
       <span
-        class="size-[32px] max-w-[32px] rounded-full isolate aspect-video w-96 bg-neutral-950/20 border dark:border-neutral-500/20 ring-1 ring-black/5"
+        class="size-[32px] max-w-[32px] rounded-full isolate aspect-video w-96 bg-purple-950/20 dark:bg-neutral-950/20 border dark:border-neutral-500/20 ring-1 ring-black/5"
       ></span>
       <nav class="flex items-center gap-3 lg:gap-8">
         <IconToggle client:load />
