--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Container from "@/components/Container.astro";
+import Articles from "@/components/Articles.astro";
 import Layout from "@/layouts/Layout.astro";
 
 import { BriefcaseBusiness, Github } from "lucide-react";
@@ -87,28 +88,7 @@ import { Button } from "@/components/ui/button";
 
       <Separator className="my-8" />
 
-      <div class="flex flex-col gap-y-6">
-        <Text as="h3" variant="h3" className="font-grund">All articles</Text>
-        <div class="flex flex-1 flex-col gap-4">
-          {
-            Array.from({ length: 4 }).map(() => (
-              <div class="group flex w-full flex-col justify-between gap-1.5 rounded-lg border border-neutral-300 dark:border-neutral-700 p-4 text-muted-foreground hover:text-primary transition-all duration-200 hover:scale-[1.005] hover:border-purple-300/40 hover:bg-purple-600/5 active:scale-[1] cursor-pointer dark:bg-primary/[0.03] dark:hover:bg-primary/10">
-                <Text className="font-bold text-lg dark:text-purple-200/50 text-purple-950/50 group-hover:text-purple-600 dark:group-hover:text-purple-500 transition-colors duration-200 font-grund">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                </Text>
-                <Text
-                  variant="span"
-                  className="text-muted-foreground text-sm font-sans"
-                >
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Consectetur ab illum vel quam laudantium nesciunt ut error
-                  nemo.
-                </Text>
-              </div>
-            ))
-          }
-        </div>
-      </div>
+      <Articles />
     </div>
   </Container>
 </Layout>
