--- a/src/components/Articles.astro
+++ b/src/components/Articles.astro
@@ -1,36 +1,27 @@
 ---
-import { Text } from "@/components/ui/typography";
+import type { ArticleStyleVariants, ArticleType } from "@/types";
 
-type Article = {
-  id: number;
-  userId: number;
-  title: string;
-  body: string;
+import { Article } from "@/components/article";
+
+type Props = {
+  limit?: number;
+  offset?: number;
+  style: ArticleStyleVariants;
 };
 
+const { limit = 3, offset = 0, style = "default" } = Astro.props;
+
 const request = await fetch("https://jsonplaceholder.typicode.com/posts");
-const articles = ((await request.json()) as Article[]).slice(4, 8);
+const data = ((await request.json()) as ArticleType[]).slice(offset, offset + limit);
 ---
 
 <div class="flex flex-col gap-y-6">
-  <Text as="h3" variant="h3" className="font-grund">All articles</Text>
+  <slot />
   <div class="flex flex-1 flex-col gap-4">
     {
-      articles.map(({ title, body }) => {
-        return (
-          <div class="group flex w-full flex-col justify-between gap-1.5 rounded-lg border border-neutral-300 dark:border-neutral-700 p-4 text-muted-foreground hover:text-primary transition-all duration-200 hover:scale-[1.005] hover:border-purple-300/40 hover:bg-purple-600/5 active:scale-[1] cursor-pointer dark:bg-primary/[0.03] dark:hover:bg-primary/10">
-            <Text className="font-bold text-lg dark:text-purple-200/50 text-purple-950/50 group-hover:text-purple-600 dark:group-hover:text-purple-500 transition-colors duration-200 font-grund capitalize truncate">
-              {title}
-            </Text>
-            <Text
-              variant="span"
-              className="text-muted-foreground text-sm font-sans line-clamp-2"
-            >
-              {body}
-            </Text>
-          </div>
-        );
-      })
+      data.map((article) => (
+        <Article article={article} style={style} />
+      ))
     }
   </div>
 </div>
