feat: update button component primary variant

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -69,18 +69,10 @@ import { Button } from "@/components/ui/button";
         />
 
         <div class="flex items-center gap-x-2">
-          <Button
-            className="border border-purple-950/30 text-purple-950/50 transition-all duration-200 dark:border-neutral-700 size-7 hover:bg-primary/[0.03] dark:hover:bg-primary/5 dark:text-neutral-400 hover:text-purple-950/60"
-            variant="ghost"
-            size="icon"
-          >
+          <Button className="size-7" variant="primary" size="icon">
             <BriefcaseBusiness />
           </Button>
-          <Button
-            className="border border-purple-950/30 text-purple-950/50 transition-all duration-200 dark:border-neutral-700 size-7 hover:bg-primary/[0.03] dark:hover:bg-primary/5 dark:text-neutral-400 hover:text-purple-950/60"
-            variant="ghost"
-            size="icon"
-          >
+          <Button className="size-7" variant="primary" size="icon">
             <Github />
           </Button>
         </div>
