--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,13 +80,13 @@ import { Button } from "@/components/ui/button";
 
       <Separator className="my-8" />
 
-      <Articles limit={2} offset={0} style="full">
+      <Articles size={2} offset={0} style="full" filter="latest">
         <Text as="h3" variant="h3" className="font-grund">Latest articles</Text>
       </Articles>
 
       <Separator className="my-8 bg-transparent" />
 
-      <Articles limit={3} offset={2} style="compact">
+      <Articles size={3} offset={2} style="compact" filter="popular">
         <Text as="h3" variant="h3" className="font-grund">Popular articles</Text>
       </Articles>
     </div>
