--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -12,7 +12,7 @@ import { defaultOption } from "@/consts";
   <Container>
     <div class="max-w-3xl mx-auto flex flex-col gap-y-4">
       <GoToBtn />
-      <Articles limit={3} style={defaultOption.value}>
+      <Articles size={10} style={defaultOption.value}>
         <Text as="h3" variant="h3" className="font-grund">All articles</Text>
       </Articles>
     </div>
