--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -1,9 +1,13 @@
 ---
+import HeaderSection from "@/components/header-section.astro";
 import ArticleLayout from "@/layouts/ArticleLayout.astro";
+import TocSection from "@/components/toc-section.astro";
+import ProseLayout from "@/components/Prose.astro";
 
 import { type CollectionEntry, getCollection, render } from "astro:content";
+
 import { sortItemsByDateDesc } from "@/lib/article";
-import { toSlug } from "@/lib/utils";
+import { toSlug, formatDate } from "@/lib/utils";
 
 export async function getStaticPaths() {
   const articles = (await getCollection("article")).sort(sortItemsByDateDesc);
@@ -28,19 +32,22 @@ type Props = {
   nextArticle: CollectionEntry<"article"> | null;
 };
 
-const { slug } = Astro.params;
 const { article } = Astro.props;
-const { title, description, pubDate } = article.data;
+const { title, description, pubDate, tags } = article.data;
 
-const { Content, remarkPluginFrontmatter } = await render(article);
+const { Content, remarkPluginFrontmatter, headings } = await render(article);
 ---
 
-<ArticleLayout
-  description={description}
-  minutesRead={remarkPluginFrontmatter.minutesRead}
-  pubDate={pubDate}
-  title={title}
-  slug={slug}
->
-  <Content />
+<ArticleLayout title={title} description={description}>
+  <HeaderSection
+    minutesRead={remarkPluginFrontmatter.minutesRead}
+    formatedDate={formatDate(pubDate)}
+    slot="header-section"
+    title={title}
+    tags={tags}
+  />
+  <TocSection slot="toc-section" headings={headings} />
+  <ProseLayout slot="content-section">
+    <Content />
+  </ProseLayout>
 </ArticleLayout>
