--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -1,7 +1,7 @@
 ---
-import HeaderSection from "@/components/header-section.astro";
+import HeaderSection from "@/components/astro/header-section.astro";
+import TocSection from "@/components/astro/toc-section.astro";
 import ArticleLayout from "@/layouts/ArticleLayout.astro";
-import TocSection from "@/components/toc-section.astro";
 import ProseLayout from "@/components/Prose.astro";
 
 import { type CollectionEntry, getCollection, render } from "astro:content";
