--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
-import Content from "@/components/Content.astro";
-import Header from "@/components/Header.astro";
-import Footer from "@/components/Footer.astro";
-import Head from "@/components/Head.astro";
+import Content from "@/components/astro/Content.astro";
+import Header from "@/components/astro/Header.astro";
+import Footer from "@/components/astro/Footer.astro";
+import Head from "@/components/astro/Head.astro";
 
 type Props = {
   title: string;
