--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Container from "@/components/Container.astro";
-import Articles from "@/components/Articles.astro";
+import Container from "@/components/astro/Container.astro";
+import Articles from "@/components/astro/Articles.astro";
 import Layout from "@/layouts/Layout.astro";
 
 import { BriefcaseBusiness, Github } from "lucide-react";
