--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -1,12 +1,34 @@
----
-
----
-
-<div
-  class="content-bleed prose dark:prose-invert
-  prose-h1:font-bold prose-h1:text-xl
-  prose-a:text-blue-600 prose-p:text-justify prose-img:rounded-xl
-  prose-headings:underline"
+<article
+  class="content-bleed prose dark:prose-invert prose-h2:font-poppins prose-h2:font-medium prose-h2:no-underline prose-h2:text-2xl prose-h1:font-bold prose-h1:text-xl prose-h1:font-inter font-grund prose-a:text-purple-600 prose-p:text-justify prose-p:w-full prose-p:font-inter prose-p:text-lg prose-p:font-light prose-p:leading-7 prose-p:tracking-[0.3px] prose-img:rounded-xl prose-headings:underline prose-blockquote:px-4 prose-blockquote:py-1 prose-ul:list-disc prose-ul:font-light prose-ul:font-inter prose-ol:font-inter prose-ul:text-base prose-ol:text-base prose-ol:list-decimal prose-ul:list-image-[url(/src/assets/arrow.svg)] prose-ul:my-8 prose-ol:my-8 prose-ol:font-light marker:text-purple-600"
 >
   <slot />
-</div>
+</article>
+
+<style is:global>
+  .line {
+    display: inline;
+    padding-bottom: 0;
+  }
+  .diff {
+    display: inline-block;
+    width: 100vw;
+    margin: 0 -12px;
+    padding: 0 12px;
+  }
+  .diff.add {
+    background-color: #0505;
+  }
+  .diff.remove {
+    background-color: #8005;
+  }
+  .diff:before {
+    position: absolute;
+    left: 40px;
+  }
+  .has-focused .line {
+    filter: blur(0.095rem);
+  }
+  .has-focused .focused {
+    filter: blur(0);
+  }
+</style>
